--- a/src/App.css
+++ b/src/App.css
@@ -14,9 +14,9 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #e4e4e4;
   min-height: 100vh;
-  display: flex;
+  display: block;
   flex-direction: column;
   align-items: center;
   justify-content: center;
