style: add responsive

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #e4e4e4;
+  background-color: #f8f8f8;
   min-height: 100vh;
   display: block;
   flex-direction: column;
